smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/operations/missing-ws-after-input.smithy
// Syntax error at line 6, column 29: Expected one or more whitespace characters, but found COLON(':')
$version: "2.0"
namespace smithy.example

operation GetFoo {
    input: GetFooInputoutput: GetFooOutput
}
